lib_LTLIBRARIES         = libtinySAK.la

libtinySAK_la_SOURCES  = tsk.c\
	tsk_base64.c\
	tsk_binaryutils.c\
	tsk_buffer.c\
	tsk_condwait.c\
	tsk_debug.c\
	tsk_fsm.c\
	tsk_hmac.c\
	tsk_list.c\
	tsk_md5.c\
	tsk_memory.c\
	tsk_mutex.c\
	tsk_object.c\
	tsk_options.c\
	tsk_params.c\
	tsk_ppfcs16.c\
	tsk_ppfcs32.c\
	tsk_ragel_state.c\
	tsk_runnable.c\
	tsk_safeobj.c\
	tsk_semaphore.c\
	tsk_sha1.c\
	tsk_string.c\
	tsk_thread.c\
	tsk_time.c\
	tsk_timer.c\
	tsk_url.c\
	tsk_uuid.c\
	tsk_xml.c
	
# LDFLAGS
libtinySAK_la_LDFLAGS = $LDFLAGS -no-undefined

# Headers file to install
libtinySAK_la_HEADERS = *.h
libtinySAK_ladir = $(includedir)/tinySAK
